[gd_scene load_steps=2 format=3 uid="uid://ndaqpera1ffv"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_4sv7i"]

[node name="Pregame" type="Node2D"]
script = ExtResource("1_4sv7i")

[node name="Level" type="HSlider" parent="."]
offset_left = 1152.0
offset_top = 320.0
offset_right = 1472.0
offset_bottom = 384.0
min_value = 1.0
max_value = 19.0
value = 1.0
tick_count = 19
ticks_on_borders = true

[node name="Audio" type="OptionButton" parent="."]
offset_left = 512.0
offset_top = 192.0
offset_right = 704.0
offset_bottom = 256.0
theme_override_font_sizes/font_size = 25
selected = 0
item_count = 4
popup/item_0/text = "Music 1"
popup/item_1/text = "Music 2"
popup/item_1/id = 1
popup/item_2/text = "Music 3"
popup/item_2/id = 2
popup/item_3/text = "Music 4"
popup/item_3/id = 3

[node name="Tutorial" type="Button" parent="."]
offset_left = 480.0
offset_top = 448.0
offset_right = 736.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 24
text = "Play Tutorial mode"

[node name="PlayTutorMode" type="ConfirmationDialog" parent="Tutorial"]
process_mode = 3
auto_translate_mode = 1
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
title = "Launch Tutorial Mode?"
initial_position = 1
size = Vector2i(800, 320)
max_size = Vector2i(1920, 1080)
ok_button_text = "Confirm"
dialog_text = "NOTE: Tutorial mode is currently a work-in-progress."
dialog_autowrap = true
cancel_button_text = "Go Back"

[node name="CheckButton" type="CheckButton" parent="."]
offset_left = 1152.0
offset_top = 448.0
offset_right = 1472.0
offset_bottom = 511.0
theme_override_font_sizes/font_size = 20
text = "Next queue is 3 pieces long"

[node name="Button" type="Button" parent="."]
offset_left = 832.0
offset_top = 576.0
offset_right = 1088.0
offset_bottom = 704.0
theme_override_font_sizes/font_size = 30
text = "PLAY GAME"

[node name="Level2" type="Label" parent="."]
offset_left = 1248.0
offset_top = 280.0
offset_right = 1376.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 30
text = "Level"
horizontal_alignment = 1

[node name="Back" type="Button" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 25
text = "Back
<<"

[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="confirmed" from="Tutorial/PlayTutorMode" to="." method="_on_play_tutor_mode_confirmed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
